--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
    		<artifactId>cc.kave.commons</artifactId>
   	  	<version>0.0.4</version>
 	</dependency>
-	
+	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.8.2</version>
+	</dependency>
   </dependencies>
 </project>
