--- a/.classpath
+++ b/.classpath
@@ -11,12 +11,15 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+	<classpathentry excluding="Recommender/MultipleEvents/|Recommender/SingleEvent/|Recommender/TestCollections/" kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src/test/java/Recommender/MultipleEvents"/>
+	<classpathentry kind="src" path="src/test/java/Recommender/SingleEvent"/>
+	<classpathentry kind="src" path="src/test/java/Recommender/TestCollections"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
